--- a/Frontend/smsfilteringapplication/app/src/main/AndroidManifest.xml
+++ b/Frontend/smsfilteringapplication/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <uses-permission android:name="android.permission.RECEIVE_MMS" />
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
