--- a/Frontend/smsfilteringapplication/app/src/main/AndroidManifest.xml
+++ b/Frontend/smsfilteringapplication/app/src/main/AndroidManifest.xml
@@ -43,7 +43,13 @@
         <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
     </intent-filter>
 </receiver> -->
-
+        <activity
+            android:name=".screens.Evalmailbox"
+            android:exported="true">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".screens.Messagereporting"
             android:exported="true">
