--- a/Frontend/smsfilteringapplication/app/src/main/AndroidManifest.xml
+++ b/Frontend/smsfilteringapplication/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="WRITE_BLOCKED_NUMBERS"/>
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_MMS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MyApp"
